# SAME-samples

./: .gitignore  Pipfile  Processing Medical Journals.ipynb  README.md  Sample_Notebook.ipynb  houseprice.py  notebook_today.ipynb  pyproject.toml  same.yaml
.github/workflows/: run-on-cluster.yml
01-hello-world/: 01-hello-world.ipynb  pyproject.toml  same.yaml
02-multi-step-notebook/: pyproject.toml  same.yaml  sample_notebook.ipynb  test.csv
03-road-signs/: Dockerfile  build-and-push.sh  roadsigns.ipynb  same.yaml
archive/automated_notebook/: README.md  requirements.txt  same.yaml  sample_notebook.py
archive/automated_notebook/compiled/: compiled_file.py  deepdiff_compare_sys.py  function_0002.py  function_0004.py  pipeline.yaml
archive/complex_graph/: README.md  pyproject.toml
archive/external_datasource/: README.md  pyproject.toml
archive/houseprice/: README.md
automated_notebook/: Sample Notebook.ipynb  basic-scatter.html  pyproject.toml  requirements.txt  sample_notebook.ipynb  sample_notebook.py
automated_notebook/compiled/: compiled_file.py  function_0001.py  function_0003.py  root.py  same.yaml
complex_graph/: foo.yaml  same.yaml  simplepipeline.py  train.csv
external_datasource/: connection_string_secret_sample.yaml  external_datasource.py  same.yaml  test.csv  train.csv
houseprice/: README.md  houseprice.py
sample_same_solution/before/: Processing Medical Journals.ipynb  crf_tagger.pkl  pyproject.toml  train_ann.pkl  train_ann_dics.pkl  train_txt.pkl  train_txt_ann.pkl  train_txt_ann2.pkl  train_txt_ann3.pkl
