[tool.poetry]
name = "01-hello-world"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kfp = "^1.7.2"
azureml-core = {version = "^1.33", python = ">=3.8,<3.9p"}
jupyter = "^1.0.0"
tensorflow = "^2.6.0"
matplotlib = "^3.4.3"
plotly = "^5.2.2"
scipy = {version = "^1.7.1", python = ">=3.8,<3.10"}
pandas = "^1.3.2"
chart-studio = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
