[tool.poetry]
name = "02-multi-step-notebook"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.1.1"
plotly = "^5.6.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scipy = {version = "^1.8.0", python = ">=3.8,<3.11"}
tensorflow = {version = "^2.8.0", python = ">=3.8,<3.11"}
sameproject = {version = "^0.1.4", python = ">=3.8,<3.11"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
