[tool.poetry]
name = "same-samples"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9.4"
kfp = "^1.4.0"
setuptools = "^54.2.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
